Skip to content

VLC does not respect mutual exclusion of video track in asf

The following URLs link to a file wich countain a multi-bitrate-video + multi-language (3V+23A) ASF/WMV file:

http://vodlux.europarl.europa.eu/download/nas/nasvod01/vod0405/2010/wm/VODChapter_20100517_17050500_17052700.wmv

When accessing this file served by an apache server (but also the same file saved locally), VLC does start 3 video rather that one.

This might be considered as a "feature" but in fact it is properly writen in the file and VLC knows that the 3 video track are mutualy excluding each other.

asf debug: found object guid: 0xa08649cf-0x4775-0x4670-0x8a166e35357566cd size:48 asf debug: read "advanced mutual exclusion object" asf debug: - stream=24 asf debug: - stream=25 asf debug: - stream=26

VLC should choose to only display one of the video.

Maybe the end-user should be able to specify in advance wich video he prefer (based on specified or autodetect bandwidth) to watch... but right now VLC does not behave as expected and as specified in the file.

The behaviour of the "Video > Video Track" is rather strange. Only one video track seems to be enable (even if you see 3 copies of the video).

You can switch video track, but it does not change anything.

However, you can disable the video, then select one video track and only that one appear.

But then, if you select an additionnal video track, you get two tracks where you would have expect a "radio button" behaviour where you switch from one track to another.

This problem has been described at the item A) in the following message: http://permalink.gmane.org/gmane.comp.video.videolan.vlc.devel/72992

Edited by Jean-Baptiste Kempf
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information