demux: asf: follow track exclusion list (fix #3796)